# symengine.hs

./: .codeclimate.yml  .gitignore  .travis.yml  LICENSE  LICENSE.md  PROPOSAL.md  README.md  flake.nix  stack.yaml  symengine-hs.cabal  symengine.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: Lib.hs  Symengine.hs
src/Symengine/: BasicSym.hs  Context.hs  DenseMatrix.hs  Internal.hs  NumberTheory.hs  VecBasic.hs
test/: PROPOSAL.md  Spec.hs
