cabal-version: 3.0
name:          symengine
version:       0.2.0.0
synopsis:      SymEngine symbolic mathematics engine for Haskell
description:   Please see README.md
homepage:      https://github.com/symengine/symengine.hs
license:       MIT
license-file:  LICENSE
author:        Siddharth Bhat
maintainer:    siddu.druid@gmail.com
copyright:
  2016 Siddharth Bhat
  2023 Tom Westerhout

category:      FFI, Math, Symbolic Computation
build-type:    Simple
tested-with:   GHC ==9.2.7

flag no-flint
  description: disable linking with Flint
  manual:      True
  default:     False

flag no-mpc
  description: disable linking with MPC
  manual:      True
  default:     False

flag no-mpfr
  description: disable linking with MPFR
  manual:      True
  default:     False

common common-options
  build-depends:      base >=4.16.0.0 && <5
  ghc-options:
    -Weverything -Wno-unsafe -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-import-lists -Wno-missing-kind-signatures
    -Wno-monomorphism-restriction

  default-language:   GHC2021
  default-extensions: DerivingStrategies

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Symengine
  other-modules:
    Symengine.Context
    Symengine.Internal

  build-depends:
    , bytestring
    , containers
    , ghc-bignum
    , inline-c
    , inline-c-cpp
    , template-haskell
    , text
    , vector

  extra-libraries: symengine

  if !flag(no-flint)
    extra-libraries: flint

  if !flag(no-mpc)
    extra-libraries: mpc

  if !flag(no-mpfr)
    extra-libraries: mpfr

  if os(linux)
    extra-libraries: stdc++

  if os(osx)
    extra-libraries: c++

test-suite symengine-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , symengine
    , text

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
